public/css/common.css
/* public/css/common.css */

/* Reset styles */
* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }

 body, html {
   height: 100%;
   font-family: Arial, sans-serif;
   font-size: 12px;
 }
/* ------------ HEADER  & FOOTER ------------ */

.header-container,
.footer-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-left: 20px; /* Adds space before the SVG and text */
   padding-right: 20px; /* Adds some padding to the right */
   width: 100%;
   box-sizing: border-box; /* Ensures padding and margin are included in the width calculation */
}

.header-left-content,
.footer-left-content {
   display: flex;
   align-items: center;
}

.header-center-content,
.footer-center-content {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
}

.header-right-content,
.footer-right-content {
   position: absolute;
   right: 5%;
   transform: translateX(5%);
}

.header-logo {
   width: 50px;
   height: auto;
   margin-right: 10px;
}

.header-logo-text {
   font-size: 28px;
   color: white;
   text-decoration: none;
}

.header-center-text {
   font-size: 18px;
   color: white;
}

.fixed-hf {
   position: fixed;
   left: 0;
   width: 100%;
   background-color: #333;
   color: #fff;
   display: flex;
   align-items: center;
   padding: 0 20px;
   z-index: 1000;
 }

 .fixed-header {
   top: 0;
   height: 60px; /* Fixed height */
 }

.fixed-footer {
   bottom: 0;
   height: 40px; /* Fixed height */
   justify-content: center;
}
.footer-center-text,
.footer-right-text {
   font-size: 12px;
   color: white;
   text-decoration: none;
}
/* ------------ MAIN AREA  ------------ */
.main-content {
   display: flex;
   flex-direction: column;
   height: 100%;
   padding-top: 60px; /* Height of header */
   padding-bottom: 40px; /* Height of footer */
 }

/* ------------ TABS AREA  ------------ */
.tab-nav {
   background-color: #f4f4f4;
   border-bottom: 1px solid #ccc;
   z-index: 10;
 }


 .tab-nav ul {
   list-style: none;
   display: flex;
 }

 .tab-nav li {
   margin-right: 10px;
 }

 .tab-nav a {
   display: block;
   padding: 15px 20px;
   text-decoration: none;
   color: #333;
 }

 .tab-nav a.active {
   background-color: #ddd;
   font-weight: bold;
 }

 .tab-content {
   flex: 1;
   padding: 0;
   overflow: auto; /* Enables both vertical and horizontal scrollbars if needed */
   background-color: #fff;
 }

/* ------------ SINGLE TAB AREA  ------------ */
.tab-container {
   display: flex;
   height: 100%;
   padding-top: 0;
   }

.row-header-title{
      font-size: 14px;
      cursor: pointer;
    }
/* ------------ SINGLE TAB - LEFT COL  ------------ */
.tab-container-left-col {
   width: 15%; /* Approximately 15% of horizontal space */
   min-width: 150px; /* set a minimum width */
   background-color: #ddd;
   border-right: 1px solid #ccc;
   overflow: auto; /* Enables both vertical and horizontal scrolling */

   padding: 10px;
   }
.tab-container-left-col  div {
   margin-bottom: 10px;
}
.tab-container-left-col  div > div {
   margin-left: 20px;
}
/* ------------ SINGLE TAB - LEFT COL - CHECK BOX ------------ */

.masterCheckbox {
   position: sticky;
   top: 0;
   padding-bottom: 10px;
   background-color: #cccccc;
   border-bottom: 1px solid #ccc;
   z-index: 10;
}

.label-level1-checkbox {
   color: rgb(224, 118, 52);
}

/* ------------ SINGLE TAB - MAIN COL  ------------ */

.tab-container-main-col {
   width: 85%; /* Approximately 85% of horizontal space */
   padding: 10px;
   overflow: auto; /* Enables both vertical and horizontal scrolling */
}

.tab-container-main-col table {
   width: 100%;
   border-collapse: collapse;
 }

.tab-container-main-col th {
   padding: 0;
   text-align: center;
   white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
}

.tab-container-main-col td {
   padding: 10px;
   border: 1px solid #ccc;
   text-align: left;
   white-space: nowrap; /* Prevents text from wrapping, enabling horizontal scrolling */
}

.tab-container-main-col thead th {
   position: sticky;
   top: 0;
   background-color: #f1f1f1;
   z-index: 3; /* Ensures headers stay above the table body */
   padding: 0;
   border: none; /* Remove the border */
   /* box-shadow: inset 0 -1px 0 black, inset 0 1px 0 black; Top and bottom black lines */
   box-shadow:
       inset 0 -1px 0 black;   /* Bottom border */
       /* inset 0 1px 0 black,   /* Top border */
       /* inset -1px 0 0 black,  /* Left border */
       /* inset 1px 0 0 black;   /* Right border */
}

.tab-container-main-col thead tr:nth-child(2) th {
   top: 30px; /* based on first row height */
   z-index: 3;
}

.tab-container-main-col thead tr:nth-child(3) th {
   top: 60px; /* based on the combined height of the first two rows */
   z-index: 3;
}

.even_row {
   background-color: #f9f9f9;
}

.transparent_row,
.odd_row {
   background-color: transparent; /* default color */
}

.td_red {
   background-color: #fbb8b8; /* default color */
}
.td_yellow {
   background-color: #f1e0a8
}
.td_green {
   background-color: #9aeeb1;
}


.tab-container-main-col tbody tr td {
   z-index: 1; /* Ensure table body rows stay behind headers */
}


/* ------------ CSS FOR SORTING THE TABLE ------------ */

/* Change the cursor to pointer and add hover effect */
.column-sort {
   cursor: pointer;
   color: inherit; /* maintain the text color */
 }

 .column-sort:hover {
   text-decoration: underline;
   color: blue; /* change the color on hover */
 }

 /* ------------ CSS FOR SHARE BUTTON & RESPONSE ------------ */

#share-status-message {
   display: none; /* Hidden by default */
   margin-top: 10px;
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 14px;
   position: relative;
 }

 #share-status-message.ok {
   background-color: #d4edda;
   color: #155724;
   border: 1px solid #c3e6cb;
 }

 #share-status-message.error {
   background-color: #f8d7da;
   color: #721c24;
   border: 1px solid #f5c6cb;
 }

 #share-status-icon {
   margin-right: 5px;
 }

/* ------------ CSS FOR DATES ------------ */

.days-ago {
   font-style: italic;
   color: #7689d3;
}

/* ------------ CSS FOR NUMBERS/ METRICS ------------ */

.front-number {
   display: inline-block;
   font-size: 10px;
   font-weight: bold;
   padding: 5px 10px; /* Padding around the text */
   border-radius: 10px; /* Rounded corners */
   margin: 2px; /* Space around each element */
   text-align: center; /* Aligns text horizontally */
}

.rounded-number {
display: inline-block;
color: #ffffff; /* Font color */
font-size: 10px;
font-weight: bold;
padding: 5px 10px; /* Padding around the text */
border-radius: 10px; /* Rounded corners */
margin: 2px; /* Space around each element */
text-align: center; /* Aligns text horizontally */
}

.sr-metric-bugs-back,
.dt-metric-critical-back {
   background-color: #ef3017;
}
.dt-metric-high-back {
background-color: #dd6119;
}
.dt-metric-medium-back {
background-color: #595d59;
}
.sr-metric-codesmell-back,
.dt-metric-low-back {
background-color: #9e9595;
}
.sr-metric-vulnerabilities-back,
.dt-metric-vulnerabilities-back {
/* background-color: #734a77; */
background-color: #8f7292;

}
.dt-metric-components-back {
background-color: #9b9ef1;
/* background-color: #aeb0f1; */

}


.sr-metric-bugs-front,
.dt-metric-critical-front {
color: #ef3017;
}
.dt-metric-high-front {
color: #dd6119;
}
.dt-metric-medium-front {
color: #595d59;
}
.sr-metric-codesmell-front,
.dt-metric-low-front {
color: #9e9595;
}
.sr-metric-vulnerabilities-front,
.dt-metric-vulnerabilities-front {
color: #734a77;
}
.dt-metric-components-front {
color: #898df3;
}



/* ------------ CSS common FOR services * prodowner <START> ------------ */
/* public/css/tab/tab-services.css */

.tab-container-main-col thead tr:nth-child(2) th {
   top: 40px; /* value based on the height of the first row */
   z-index: 4; /* This ensures the second row stays above the first */
 }


 .group-header {
       font-size: 14px;

       /* define height for group header row for better alignment */
       height: 40px;
     }
     .group-service,
     .group-sonar,
     .group-ecs {
       background-color: #e1b4b4;
     }

     .group-git,
     .group-version,
     .group-deptrack {
       background-color: #f6a8a8;
     }

    .header-service,
    .header-sonar-metric,
    .header-ecs {
       background-color: #9e9c9c;
    }

    .header-git,
    .header-version,
    .header-deptrack {
       background-color: #c7c6c6;
    }

 /* ------------ CSS FOR TABLE HEADER ------------ */
 .header-sonar-metric span,
 .header-ecs span,
 .header-dt-metric span {
    writing-mode: vertical-rl;
    transform: scale(1);
 }

 /* ------------ CSS FOR TABLE TD ------------ */
 .td-name a,
 .td-git-owner a,
 .td-git-lang a,
 .td-git-version a,
 .td-git-date a,
 .td-ecs a {
    color: rgb(0, 0, 0);
    text-decoration: none;
 }
 .td-name a {
    color: rgb(224, 118, 52);
 }
 .td-version {
    background-color: #ddd;
    color: rgb(224, 118, 52);
 }
 .deptrack-link,
 .sonar-link  {
    text-decoration: none;
    color: inherit; /* Inherit color from parent */
 }

 /* ------------ CSS FOR RUNTIME LIST ------------ */

 .td-git-version-info,
 .td-runtime-info {
   margin-left: 0;     /* Remove left margin */
   padding-left: 0px;  /* Reduce left padding (or set to 0 for no indentation) */
   list-style-position: inside; /* Ensure bullet points align with the text */
  }

/* ------------ CSS common FOR services * prodowner <END> ------------ */

